apps/double-take/30-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: double-take
  namespace: frigate
spec:
  entryPoints: [web]
  routes:
    - match: Host(`double-take.lan`)
      kind: Rule
      services:
        - name: double-take
          port: 3000
